# procedural-textures

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  procedural-textures.cabal
.github/workflows/: ci.yml  gh-pages.yml
site/: .gitkeep
src/: ColourRamps.hs  Colours.hs  HtmlOutput.hs  Main.hs  PNGCompare.hs  PNGCompareCore.hs  Perlin.hs  Render.hs  Texture.hs
test/: PNGCompareSpec.hs  Spec.hs
